<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black_24dp"
                android:padding="10dp"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/img_prodPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/button_uploadProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_green_filled"
            android:padding="7dp"
            android:gravity="center"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_photo_camera_black_24dp"
                android:layout_margin="5dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prodPhoto"
                style="@style/TextStyleLight"
                android:textColor="@color/colorWhite"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <app.hackathon.suki.suki.custom.CustomInput
            android:id="@+id/text_productName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:ci_header_text="@string/prodName"
            app:ci_editText_input_hint="@string/prodNameHint"
            android:layout_marginBottom="10dp"/>
        <app.hackathon.suki.suki.custom.CustomInput
            android:id="@+id/text_productQty"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:ci_header_text="@string/prodQty"
            app:ci_editText_input_hint="@string/prodQtyHint"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal"/>
        <app.hackathon.suki.suki.custom.CustomInput
            android:id="@+id/text_productPrice"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:ci_header_text="@string/prodPrice"
            app:ci_editText_input_hint="@string/prodPriceHint"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyleLight"
                android:text="@string/prodOrganic"
                android:layout_marginRight="10dp"/>
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyleLight"
                android:text="@string/prodInorganic"/>
        </RadioGroup>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_categ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

        </android.support.v7.widget.AppCompatSpinner>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_addProduct"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            style="@style/ButtonStyleFilled"
            android:text="@string/addProd"/>

    </LinearLayout>
</LinearLayout>