<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".modules.activities.SetUpAccountActivity"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <include
            android:id="@+id/layout_header"
            layout="@layout/layout_toolbar_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Title"
            android:layout_marginBottom="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:id="@+id/link"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/shape_horizontal_line"
                        android:weightSum="2"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/progress_one"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:text="1"
                                android:background="@drawable/bg_circular_filled"
                                android:gravity="center"
                                android:textColor="@color/colorWhite" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right">
                            <TextView
                                android:id="@+id/progress_two"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:text="2"
                                android:background="@drawable/bg_circular_clear"
                                android:gravity="center"
                                android:textColor="@color/colorText" />
                        </LinearLayout>
                    </LinearLayout>

                    <!--Personal-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/linear_personal">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/account_setup"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/personalInf"
                            style="@style/TextStyleMedium"
                            android:gravity="center"
                            android:layout_marginBottom="20dp"/>
                        <app.hackathon.suki.suki.custom.CustomInput
                            android:id="@+id/editText_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ci_header_text="@string/fullName"
                            app:ci_editText_input_hint="@string/fullNameHint"
                            android:layout_marginBottom="10dp"
                            android:inputType="textCapWords"/>
                        <RadioGroup
                            android:id="@+id/rg_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp">
                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/gender"
                                style="@style/TextStyleRegular"/>
                            <android.support.v7.widget.AppCompatRadioButton
                                android:id="@+id/rb_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:textSize="14dp"
                                android:text="@string/male"
                                android:textColor="@color/colorText"
                                android:checked="true"/>
                            <android.support.v7.widget.AppCompatRadioButton
                                android:id="@+id/rb_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:textSize="14dp"
                                android:text="@string/female"
                                android:textColor="@color/colorText"/>
                        </RadioGroup>
                        <app.hackathon.suki.suki.custom.CustomInput
                            android:id="@+id/editText_bDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ci_header_text="@string/bdate"
                            app:ci_editText_input_hint="@string/bdateHint"
                            android:layout_marginBottom="10dp"/>
                        <app.hackathon.suki.suki.custom.CustomInput
                            android:id="@+id/editText_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ci_header_text="@string/completeAdd"
                            app:ci_editText_input_hint="@string/completeAddHint"
                            android:layout_marginBottom="10dp"
                            android:inputType="textCapWords"/>
                        <app.hackathon.suki.suki.custom.CustomInput
                            android:id="@+id/editText_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ci_header_text="@string/mobile"
                            app:ci_editText_input_hint="@string/mobileHint"
                            android:layout_marginBottom="10dp"
                            android:inputType="phone"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            style="@style/TextStyleLight"
                            android:textStyle="italic"
                            android:textSize="12dp"
                            android:layout_marginBottom="10dp"/>

                        <ImageView
                            android:id="@+id/img_idPhoto"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:visibility="gone"/>
                        <LinearLayout
                            android:id="@+id/button_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_btn_green_filled"
                            android:padding="7dp"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_photo_camera_black_24dp"
                                android:layout_margin="5dp"/>

                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/uploadID"
                                style="@style/TextStyleLight"
                                android:textColor="@color/colorWhite"
                                android:layout_margin="5dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="right"
                            android:layout_marginTop="20dp">
                            <Button
                                android:id="@+id/button_next"
                                android:layout_width="150dp"
                                android:layout_height="40dp"
                                style="@style/ButtonStyleFilled"
                                android:text="@string/next"
                                android:layout_marginBottom="20dp"/>
                        </LinearLayout>
                    </LinearLayout>



                    <!--BUSINESS INFO-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/linear_business"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/shop"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/businessInfo"
                            style="@style/TextStyleMedium"
                            android:gravity="center"
                            android:layout_marginBottom="20dp"/>
                        <app.hackathon.suki.suki.custom.CustomInput
                            android:id="@+id/editText_businessName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ci_header_text="@string/businessName"
                            app:ci_editText_input_hint="@string/businessNameHint"
                            android:layout_marginBottom="10dp"
                            android:inputType="textCapWords"/>

                        <app.hackathon.suki.suki.custom.CustomInput
                            android:id="@+id/editText_busAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ci_header_text="@string/businessAdd"
                            app:ci_editText_input_hint="@string/businessAddHint"
                            android:layout_marginBottom="10dp"
                            android:inputType="textCapWords"/>
                        <app.hackathon.suki.suki.custom.CustomInput
                            android:id="@+id/editText_busPermit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ci_header_text="@string/businessPermitNo"
                            app:ci_editText_input_hint="@string/businessPermitNoHint"
                            android:layout_marginBottom="10dp"
                            android:inputType="phone"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            style="@style/TextStyleLight"
                            android:textStyle="italic"
                            android:textSize="12dp"
                            android:layout_marginBottom="10dp"/>
                        <ImageView
                            android:id="@+id/img_storePhoto"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:visibility="gone"/>
                        <LinearLayout
                            android:id="@+id/button_uploadStore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_btn_green_filled"
                            android:padding="7dp"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_photo_camera_black_24dp"
                                android:layout_margin="5dp"/>

                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/businessPhoto"
                                style="@style/TextStyleLight"
                                android:textColor="@color/colorWhite"
                                android:layout_margin="5dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="right"
                            android:layout_marginTop="20dp">
                            <Button
                                android:id="@+id/button_next2"
                                android:layout_width="150dp"
                                android:layout_height="40dp"
                                style="@style/ButtonStyleFilled"
                                android:text="@string/next"
                                android:layout_marginBottom="20dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </RelativeLayout>

    </LinearLayout>
</layout>