<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.activities.RegisterActivity">
    <LinearLayout
        android:id="@+id/hehe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/progressBar_loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_bg_half"/>
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2.5dp"
                        card_view:cardUseCompatPadding="true"
                        app:cardBackgroundColor="#fff"
                        android:layout_centerInParent="true">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="20dp">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:src="@drawable/account"/>
                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                style="@style/TextStyleMedium"
                                android:text="@string/createAccount"
                                android:textSize="17sp"/>
                            <app.hackathon.suki.suki.custom.CustomInput
                                android:id="@+id/editText_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:ci_editText_input_hint="@string/emailAddressHint"
                                card_view:ci_header_text="@string/emailAddress"
                                android:layout_marginBottom="10dp"
                                android:layout_marginTop="20dp"
                                android:inputType="textEmailAddress"/>
                            <app.hackathon.suki.suki.custom.CustomInput
                                android:id="@+id/editText_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:ci_editText_input_hint="@string/passwordHint"
                                card_view:ci_header_text="@string/password"
                                android:layout_marginBottom="10dp"
                                android:inputType="textPassword"/>
                            <app.hackathon.suki.suki.custom.CustomInput
                                android:id="@+id/editText_confPass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:ci_editText_input_hint="@string/confPassword"
                                card_view:ci_header_text="@string/confPasswordHint"
                                android:layout_marginBottom="10dp"
                                android:inputType="textPassword"/>
                            <RadioGroup
                                android:id="@+id/rg_account_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginBottom="30dp"
                                android:gravity="center">
                                <android.support.v7.widget.AppCompatRadioButton
                                    android:id="@+id/rb_reseller"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/reseller"
                                    style="@style/TextStyleLight"
                                    android:layout_marginRight="5dp"/>
                                <android.support.v7.widget.AppCompatRadioButton
                                    android:id="@+id/rb_Individual"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/individual"
                                    style="@style/TextStyleLight"/>

                            </RadioGroup>
                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/button_create"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                style="@style/ButtonStyleFilled"
                                android:text="@string/createAccount"
                                android:layout_marginBottom="20dp"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center">
                                <android.support.v7.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    style="@style/TextStyleLight"
                                    android:text="@string/doYouAlready"/>
                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/button_sign"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    style="@style/TextStyleMedium"
                                    android:text="@string/signIn"
                                    android:padding="5dp"
                                    android:textColor="@color/colorGreen"/>

                            </LinearLayout>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</layout>